# Currently bazel-lib is only load()ed when platforms is used.
bazel_dep(name = "bazel_lib", version = "3.1.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5", repo_name = None)  # force a recent version that works with v3
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "apple_support", version = "2.2.0")
bazel_dep(name = "aspect_rules_lint", version = "2.0.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_multitool", version = "1.11.1")
bazel_dep(name = "bazel_env.bzl", version = "0.5.0")
bazel_dep(name = "bazelrc-preset.bzl", version = "1.8.0")

# We have to take a dependency on rules_python in order to set bootstrap=script
# for transitive dependencies, even if there are no Python rules used in this repo.
# See .bazelrc
bazel_dep(name = "rules_python", version = "1.8.1")
bazel_dep(name = "gazelle", version = "0.47.0")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//tools:tools.lock.json")
use_repo(multitool, "multitool")

#########################
# Protobuf and gRPC
bazel_dep(name = "protobuf", version = "33.4")
bazel_dep(name = "protovalidate", version = "1.0.0")

# Force later resolutions of some transitives to pick up Bazel 9 fixes
bazel_dep(name = "rules_foreign_cc", version = "0.15.1", repo_name = None)

#########################
# Support for Ruby, see https://github.com/bazel-contrib/rules_ruby
bazel_dep(name = "rules_ruby")  # version = "0.21.1")
git_override(
    module_name = "rules_ruby",
    commit = "13688af7048c0aa95d4821df29b695f6816487d0",
    remote = "https://github.com/bazel-contrib/rules_ruby.git",
)

ruby = use_extension("@rules_ruby//ruby:extensions.bzl", "ruby")
ruby.toolchain(
    name = "ruby",
    version_file = "//:.ruby-version",
)
use_repo(ruby, "ruby", "ruby_toolchains")

register_toolchains("@ruby_toolchains//:all")

ruby.bundle_fetch(
    name = "bundle",
    gemfile = "//:Gemfile",
    gemfile_lock = "//:Gemfile.lock",
)
use_repo(ruby, "bundle")

register_toolchains("//tools/toolchains:all")
